Node 8, npm audit, package-lock

--- a/codelab-final-state/functions/package.json
+++ b/codelab-final-state/functions/package.json
@@ -8,10 +8,10 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha --reporter=reporter.js"
+    "test": "mocha"
   },
   "engines": {
-    "node": "10"
+    "node": "8"
   },
   "dependencies": {
     "file-system": "^2.2.2",
