--- a/codelab-initial-state/firebase.json
+++ b/codelab-initial-state/firebase.json
@@ -4,7 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": {
-    
+    "source": "functions"
   },
   "hosting": {
     "public": "public",
@@ -13,5 +13,16 @@
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "hosting": {
+      "port": 5000
+    }
   }
 }
