--- a/codelab-final-state/functions/package.json
+++ b/codelab-final-state/functions/package.json
@@ -8,7 +8,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha"
+    "test": "mocha --timeout 5000"
   },
   "engines": {
     "node": "8"
