Fix project name.

--- a/.github/workflows/firebase-ci.yaml
+++ b/.github/workflows/firebase-ci.yaml
@@ -15,4 +15,4 @@ jobs:
         working-directory: codelab-final-state/functions
       - name: Run all the tests
         working-directory: codelab-final-state/functions
-        run: firebase emulators:exec 'npm test'
+        run: firebase emulators:exec --project example 'npm test'
