--- a/codelab-final-state/functions/package.json
+++ b/codelab-final-state/functions/package.json
@@ -8,21 +8,22 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha --timeout 5000"
+    "test": "mocha --timeout 5000 --exit"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "dependencies": {
     "file-system": "^2.2.2",
-    "firebase-admin": "^8.13.0",
-    "firebase-functions": "^3.9.1"
+    "firebase-admin": "^9.2.0",
+    "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
-    "@firebase/testing": "^0.20.11",
+    "@firebase/rules-unit-testing": "^1.0.3",
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1",
-    "firebase-functions-test": "^0.2.1",
+    "firebase": "^7.21.0",
+    "firebase-functions-test": "^0.2.2",
     "mocha": "^6.1.4"
   },
   "private": true
